# Agent-Ops

./: .gitignore  README.md  package-lock.json  package.json  vercel.json
apps/api/: .env.example  pyproject.toml  railway.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_health_scans.py  0003_wallet_auth.py  0004_report_verifications.py
apps/api/app/: config.py  database.py  main.py  middleware.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: activity.py  agents.py  auth.py  auth_webhook.py  connectors.py  marketplace.py  overview.py  pricing.py  recommendations.py  router.py  scans.py  (+2 more)
apps/api/app/auth/: clerk.py  session.py
apps/api/app/jobs/: tasks.py
apps/api/app/models/: __init__.py  activity_event.py  agent.py  agent_permission.py  api_key.py  auth_challenge.py  base.py  connector.py  enums.py  health_scan.py  organization.py  recommendation.py  report_verification.py  user.py  wallet.py
apps/api/app/schemas/: activity.py  agent.py  auth.py  connector.py  marketplace.py  overview.py  pricing.py  recommendation.py  scan.py  settings.py  verification.py
apps/api/app/services/: activity_service.py  agent_service.py  connector_service.py  marketplace_service.py  recommendation_service.py  scan_service.py  settings_service.py  verification_service.py
apps/api/data/: agentops.db  agentops.db.bak-pre0003
apps/api/tests/: conftest.py  test_auth_wallet.py  test_marketplace_invoke.py  test_pricing_service.py  test_recommendation_service.py  test_scan_pipeline.py  test_scan_reports.py  test_verification_service.py
(+98 files in other folders)
